--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,11 @@ dynamic = [
 requires-python = ">=3.7, <4"
 
 # any additional requirements (besides OctoPrint) should be listed here
-dependencies = []
+dependencies = [
+    "numpy",
+    "Pillow",
+    "opencv-python-headless",
+]
 
 [tool.setuptools]
 include-package-data = true
